[package]
name = "ng-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno = { path = "../../deno/cli" }
emacs = "0.18.0"
v8 = { version = "0.49.0", default-features = false }
lazy_static = "1.4.0"